[gd_scene load_steps=3 format=2]

[ext_resource path="res://scripts/scenes/options.gd" type="Script" id=1]
[ext_resource path="res://addons/nicense/nicense_button.gd" type="Script" id=2]

[node name="Control" type="WindowDialog"]
visible = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -383.5
margin_top = -237.0
margin_right = 383.5
margin_bottom = 237.0
window_title = "Options"
script = ExtResource( 1 )

[node name="splitter" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -20.0

[node name="left" type="VBoxContainer" parent="splitter"]
margin_right = 371.0
margin_bottom = 444.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="discord_avatar" type="CheckButton" parent="splitter/left"]
margin_top = 98.0
margin_right = 371.0
margin_bottom = 138.0
text = "Use Discord avatar as loading/saving icon"

[node name="vsync" type="CheckButton" parent="splitter/left"]
margin_top = 142.0
margin_right = 371.0
margin_bottom = 182.0
text = "VSync"

[node name="vsync_compositor" type="CheckButton" parent="splitter/left"]
margin_top = 186.0
margin_right = 371.0
margin_bottom = 226.0
text = "VSync via compositor"

[node name="enableProtogenTechnology" type="CheckButton" parent="splitter/left"]
margin_top = 230.0
margin_right = 371.0
margin_bottom = 270.0
text = "Enable Protogen technology"

[node name="UseDifferentCharacterSet" type="CheckButton" parent="splitter/left"]
margin_top = 274.0
margin_right = 371.0
margin_bottom = 314.0
text = "Use different character set"

[node name="HSeparator" type="HSeparator" parent="splitter/left"]
margin_top = 318.0
margin_right = 371.0
margin_bottom = 322.0

[node name="NicenseButton" type="Button" parent="splitter/left"]
margin_top = 326.0
margin_right = 371.0
margin_bottom = 346.0
text = "Copyright & Licenses"
script = ExtResource( 2 )

[node name="right" type="VBoxContainer" parent="splitter"]
margin_left = 375.0
margin_right = 747.0
margin_bottom = 444.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="Button" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -21.5
margin_top = -20.0
margin_right = 21.5
text = "SAVE"

[connection signal="toggled" from="splitter/left/discord_avatar" to="." method="_on_discord_avatar_toggled"]
[connection signal="toggled" from="splitter/left/vsync" to="." method="_on_vsync_toggled"]
[connection signal="toggled" from="splitter/left/vsync_compositor" to="." method="_on_vsync_compositor_toggled"]
[connection signal="toggled" from="splitter/left/enableProtogenTechnology" to="." method="_on_enableProtogenTechnology_toggled"]
[connection signal="toggled" from="splitter/left/UseDifferentCharacterSet" to="." method="_on_UseDifferentCharacterSet_toggled"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
